force-app/main/default/objects/vlocity_cmt__ManualQueueMember__c/vlocity_cmt__ManualQueueMember__c.object-meta.xml
<CustomObject>
    <description>Manual Queue</description>
    <label>Manual Queue Member</label>
    <nameField>
        <label>Manual Queue Member</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Manual Queue Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>