force-app/main/default/objects/vlocity_cmt__ManualQueueMember__c/fields/vlocity_cmt__ManualQueueId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ManualQueueId__c</fullName>
    <label>Manual Queue</label>
    <referenceTo>vlocity_cmt__ManualQueue__c</referenceTo>
    <relationshipLabel>Manual Queue Members</relationshipLabel>
    <relationshipName>ManualQueueMemebers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>