force-app/main/default/objects/vlocity_cmt__ManualQueueMember__c/fields/vlocity_cmt__UserId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Manual Queue Memebers</relationshipLabel>
    <relationshipName>ManualQueueMemebers</relationshipName>
    <type>Lookup</type>
</CustomField>